# zimzim-hr

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run_main.py  run_poller.py  run_worker.py
apps/: poller.py  worker.py
apps/hik/: client.py  client_manager.py  exceptions.py  token_manager.py  utils.py
apps/hik/models/: area.py  auth.py  common.py  device.py  message.py  person.py
apps/home/: endpoints.py
apps/home/static/: script.js  styles.css
apps/home/templates/: base.html.jinja  home.html.jinja
apps/hr/: endpoints.py  models.py  piccolo_app.py  tables.py
apps/hr/hooks/: __init__.py  area.py  base.py  device.py  group.py  person.py
apps/hr/migrations/: hr_2026_01_18t10_02_41_824513.py  hr_2026_01_18t10_05_39_150697.py  hr_2026_01_19t17_43_06_665023.py  hr_2026_01_20t14_29_14_043981.py
apps/utils/: hooks.py  logger.py  mixins.py
core/: broker.py  config.py  db.py  main.py  piccolo_conf.py
core/mq/: broker.py  middlewares.py
tests/: alarm_monitoring.py  basic_usage.py  config.py  person_management.py  polling_example.py  test_broker_publish.py
